Set up SQL component

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-camel.component.servlet.mapping.context-path: /fakenews/*
+camel.component.servlet.mapping.context-path=/fakenews/*
+
+spring.datasource.url=jdbc:mysql://localhost/fakenews
+spring.datasource.username=root
+spring.datasource.password=root
