--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,6 +13,7 @@
 
     <properties>
         <camel.version>3.0.1</camel.version>
+        <mysql.version>8.0.19</mysql.version>
     </properties>
 
     <dependencies>
@@ -20,12 +21,26 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-<!--        Camel -->
+<!--        MySQL database -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+
+        <!--        Camel -->
 
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
@@ -36,6 +51,12 @@
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-servlet-starter</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-sql-starter</artifactId>
             <version>${camel.version}</version>
         </dependency>
 
